# pico-c

./: .gitignore
blink/: CMakeLists.txt  blink.c  pico_sdk_import.cmake
